--- a/index.html
+++ b/index.html
@@ -5,28 +5,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SMIT-TASK</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
 </head>
 <body>
     
-    <form action="">
-        <div class="form-data">
+    <form id="student-data">
+        <div id="form-data">
             <div class="form-input"> 
-                <p>your roll no:</p> <input type="text" placeholder="enter roll">
+                <p>your roll no:</p> <input type="text" value="" placeholder="enter roll no"  id="roll-no" name="roll-no">
             </div>
             <div class="form-input"> 
-               <p> your name:</p>  <input type="text" placeholder="enter name">
+               <p> your name:</p>  <input type="text" value="" placeholder="enter name" id="name" name="name">
             </div>
             <div class="form-input"> 
-                <p>your batch:</p><input type="number" placeholder="enter batch">
+                <p>your batch:</p><input type="text" value="" placeholder="enter batch" id="batch" name="batch">
             </div>
             <div class="form-input">
-                <p>your section:</p><input type="text" placeholder="enter section">
+                <p>your section:</p><input type="text" value="" placeholder="enter section" id="section" name="section">
             </div>
+            <button type="submit" class="btn btn-success mt-1">submit</button>
         </div>
     </form>
 
 
-    <script src="script.js"> 
-    </script>
+    <script src="script.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
