--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     </form>
 
 
+    <a href="quiz-app.html" class="btn btn-primary mt-2 w-25">go to quiz app</a>
+
     <script src="script.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
