--- a/quiz-app.html
+++ b/quiz-app.html
@@ -4,30 +4,124 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SMIT-TASK</title>
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
 </head>
 <body>
-    <div class="app">
-        <h1>quiz app</h1>
-        <div class="quiz">
-            <h2 id="question">question goes here</h2>
-            <div id="answer-button">
-                <button class="btn btn-outline-dark">Answer 1</button>
-                <button class="btn btn-outline-dark">Answer 2</button>
-                <button class="btn btn-outline-dark">Answer 3</button>
-                <button class="btn btn-outline-dark">Answer 4</button>
-            </div> 
-            <button id="next-btn">next</button>
-        </div>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            padding: 20px;
+        }
+        h1 {
+            text-align: center;
+        }
+        #quiz-container {
+            max-width: 600px;
+            margin: 0 auto;
+            border: 1px solid #ccc;
+            padding: 20px;
+            border-radius: 8px;
+        }
+        #question {
+            font-size: 18px;
+            margin-bottom: 15px;
+        }
+        .option {
+            margin-bottom: 10px;
+        }
+    </style>
+</head>
+<body>
+    <div id="quiz-container">
+        <h1>Quiz App</h1>
+        <div id="question-container"></div>
+        <form id="quiz-form">
+            <div class="option">
+                <input type="radio" id="option1" name="answer" value="option1">
+                <label for="option1" id="option1-label">Option 1</label>
+            </div>
+            <div class="option">
+                <input type="radio" id="option2" name="answer" value="option2">
+                <label for="option2" id="option2-label">Option 2</label>
+            </div>
+            <div class="option">
+                <input type="radio" id="option3" name="answer" value="option3">
+                <label for="option3" id="option3-label">Option 3</label>
+            </div>
+            <div class="option">
+                <input type="radio" id="option4" name="answer" value="option4">
+                <label for="option4" id="option4-label">Option 4</label>
+            </div>
+            <button type="button" id="next-btn">Next</button>
+        </form>
     </div>
 
+    <script>
+        const quizData = [
+            {
+                question: "What is the capital of France?",
+                options: ["Paris", "London", "Berlin", "Madrid"],
+                answer: "Paris"
+            },
+            {
+                question: "Which planet is known as the Red Planet?",
+                options: ["Mars", "Earth", "Venus", "Jupiter"],
+                answer: "Mars"
+            },
+            // Add more quiz questions here
+        ];
 
+        const questionContainer = document.getElementById('question-container');
+        const option1Label = document.getElementById('option1-label');
+        const option2Label = document.getElementById('option2-label');
+        const option3Label = document.getElementById('option3-label');
+        const option4Label = document.getElementById('option4-label');
+        const nextButton = document.getElementById('next-btn');
+        const quizForm = document.getElementById('quiz-form');
+        let currentQuestionIndex = 0;
+        let score = 0;
 
+        function loadQuestion() {
+            const currentQuestion = quizData[currentQuestionIndex];
+            questionContainer.textContent = currentQuestion.question;
+            option1Label.textContent = currentQuestion.options[0];
+            option2Label.textContent = currentQuestion.options[1];
+            option3Label.textContent = currentQuestion.options[2];
+            option4Label.textContent = currentQuestion.options[3];
+        }
 
-    <script src="script.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    
+        function checkAnswer() {
+            const selectedOption = document.querySelector('input[name="answer"]:checked');
+            if (!selectedOption) {
+                alert('Please select an option.');
+                return false;
+            }
+            const answer = selectedOption.value;
+            const currentQuestion = quizData[currentQuestionIndex];
+            if (answer === currentQuestion.answer) {
+                score++;
+            }
+            return true;
+        }
+
+        nextButton.addEventListener('click', () => {
+            if (checkAnswer()) {
+                currentQuestionIndex++;
+                if (currentQuestionIndex < quizData.length) {
+                    loadQuestion();
+                    quizForm.reset();
+                } else {
+                    // Quiz completed, navigate to result page
+                    const resultUrl = `score.html?score=${score}`;
+                    window.location.href = resultUrl;
+                }
+            }
+        });
+
+        // Initialize quiz
+        loadQuestion();
+    </script>
 </body>
 </html>
